# Open-GPGPU-ANN

./: .gitignore  .gitmodules  CMakeLists.txt  Google_Colaboratory_TensorFlow_with_GPU.ipynb  Google_Colaboratory_test_ogpgpuann.ipynb  README.md  cnn_example.py  create_sentiment_featuresets.py  deepnet.py  nengo_dl_test.py  nengo_ocl_test.py  rnn_example.py  sentiment_features_large_data.py  sentiment_nn.py  sentiment_nn_large_data.py  setup.py  testKeras.py  testKerasFunctional.py  testKerasFunctionalMinimal.py  test_SYCL.cpp  test_arrayfire.py  test_arrayfire_ml.cpp  test_pycaffe.py  test_veles.py  tfbasics.py  tflearn_cnn_example.py  veles_test.py
Open-GPGPU-ANN/: test_pycaffe.py
Open_GPGPU_ANN/: AMD_OCL.md  my_amd_clinfo.txt  nengo_dl_test.py  test_plaidml.py  test_pyopencl.py
Open_GPGPU_ANN/TensorFlow-Examples/examples/3_NeuralNetworks/: multilayer_perceptron.py
keras/: testKerasFunctionalStreaming.py
nengo/: nengo_ocl_test.py
opencl/: median_filter_example.py
opencv/: test_ocv.py
plaid_ml/: hello_vgg19.py
sentdex-nn-ml-tutorial/: cnn_example.py  sentiment_features_large_data.py  sentiment_nn.py  sentiment_nn_large_data.py
sentdex_nn_ml_tutorial/: create_sentiment_featuresets.py  rnn_example.py  sentiment_features_large_data.py  sentiment_nn.py  sentiment_nn_large_data.py
test_keras/: testKeras.py
testkeras/: testKeras.py  testKerasFunctional.py  testKerasFunctionalMinimal.py  testKerasFunctionalStreaming.py
testnengo/: nengo_ocl_test.py
testocl/: median_filter.cl  median_filter_example.py
testplaidml/: plaidml_setup.py
